--- a/acronyms.tex
+++ b/acronyms.tex
@@ -3,11 +3,26 @@
 \newacronym{LLNL}{LLNL}{Lawrence Livermore National Laboratory}
 \newacronym{LANL}{LANL}{Los Alamos National Laboratory}
 \newacronym{NIF}{NIF}{National Ignition Facility}
+\newacronym{NIF-ARC}{NIF-ARC}{National Ignition Facility - Advanced Radiographic Capability}
+\newacronym{OMEGA-EP}{OMEGA-EP}{OMEGA Extended Performance System}
 \newacronym{RF}{RF}{Radio Frequency}
 \newacronym{QCD}{QCD}{quantum chromodynamics}
 \newacronym{QED}{QED}{quantum electrodynamics}
 \newacronym{WKB}{WKB}{Wentzel-Kramers-Brillouin}
-\newacronym{FRET}{FRET}{fluorescence resonance energy transfer}
-\newacronym{ssDNA}{ssDNA}{single-stranded DNA}
-\newacronym{dsDNA}{dsDNA}{double-stranded DNA}
-\newacronym{ssNA}{ssNA}{single-stranded nucleic acid}
+\newacronym{SRIM}{SRIM}{stopping range of ions in matter}
+\newacronym{SOBP}{SOBP}{spread-out Bragg peak}
+\newacronym{OSUCCC}{OSUCCC}{The Ohio State Comprehensive Cancer Center}
+\newacronym{LLE}{LLE}{Laboratory for Laser Energetics}
+\newacronym{TNSA}{TNSA}{Target Normal Sheath Acceleration}
+\newacronym{IBA}{IBA}{Ion Beam Analysis}
+\newacronym{IMPT}{IMPT}{Intensity Modulated Proton Therapy}
+\newacronym{ALLS}{ALLS}{Advanced Laser Light Source}
+\newacronym{XPIF}{XPIF}{x-ray and particle-induced fluorescence}
+\newacronym{EDX}{EDX}{energy dispersive x-ray fluorescence}
+\newacronym{TEM}{TEM}{transverse electromagnetic mode}
+\newacronym{FWHM}{FWHM}{full width at half maximum}
+\newacronym{eTNSA}{eTNSA}{enhanced target normal sheath acceleration}
+\newacronym{LWFA}{LWFA}{laser wakefield acceleration}
+\newacronym{PIC}{PIC}{particle-in-cell}
+\newacronym{NGP}{NGP}{nearest grid point}
+\newacronym{CCD}{CCD}{charge coupled device}
