--- a/motivation.bib
+++ b/motivation.bib
@@ -4,6 +4,44 @@
 	pages={1–50}
 }
 
+@article{Passoni_2019_SciRep,
+	Author = {Passoni, M. and Fedeli, L. and Mirani, F.},
+	Title = {Superintense Laser-driven Ion Beam Analysis},
+	Journal = {Scientific Reports},
+	Year = {2019},
+	Volume = {9},
+	Month = {JUN 24},
+	DOI = {10.1038/s41598-019-45425-3}
+}
+
+@article{Boivin_2022_NJoP,
+	doi = {10.1088/1367-2630/ac6767},
+	url = {https://dx.doi.org/10.1088/1367-2630/ac6767},
+	year = {2022},
+	month = {may},
+	publisher = {IOP Publishing},
+	volume = {24},
+	number = {5},
+	pages = {053018},
+	author = {Frédéric Boivin and Simon Vallières and Sylvain Fourmaux and Stéphane Payeur and Patrizio Antici},
+	title = {Quantitative laser-based x-ray fluorescence and particle-induced x-ray emission},
+	journal = {New Journal of Physics}
+}
+
+@article{Betti_2016_Nature,
+	title = {Inertial-confinement fusion with lasers},
+	author = {Betti, R. and Hurricane, O.},
+	journal = {Nature Physics},
+	volume = {12},
+	issue = {3},
+	pages = {435--448},
+	year = {2016},
+	month = {May},
+	doi = {10.1038/nphys3736},
+	url = {https://www.nature.com/articles/nphys3736/}
+}
+
+
 @article{Simpson_2021_PPCF,
 	doi = {10.1088/1361-6587/ac2349},
 	url = {https://dx.doi.org/10.1088/1361-6587/ac2349},
@@ -12,7 +50,10 @@
 	publisher = {IOP Publishing},
 	volume = {63},
 	number = {12},
-	pages = {124006}
+	pages = {124006}, 
+	author = {R A Simpson and D A Mariscal and J Kim and G G Scott and G J Williams and E Grace and C McGuffey and S Wilks and A Kemp and N Lemos and B Z Djordjevic and E Folsom and D Kalantar and R Zacharias and B Pollock and J Moody and F Beg and A Morace and N Iwata and Y Sentoku and M J-E Manuel and M Mauldin and M Quinn and K Youngblood and M Gatu-Johnson and B Lahmann and C Haefner and D Neely and T Ma},
+	title = {Demonstration of TNSA proton radiography on the National Ignition Facility Advanced Radiographic Capability (NIF-ARC) laser},
+	journal = {Plasma Physics and Controlled Fusion}
 }
 
 @article{Zylstra_2012_RSI,
