--- a/review.bib
+++ b/review.bib
@@ -64,3 +64,18 @@
 	publisher = {IEEE, Institute of Electrical and Electronics Engineers},
 	number = {11}
 }
+
+@article{Schaeffer_2023_RevMod,
+	title = {Proton imaging of high-energy-density laboratory plasmas},
+	author = {Schaeffer, Derek B. and Bott, Archie F. A. and Borghesi, Marco and Flippo, Kirk A. and Fox, William and Fuchs, Julien and Li, Chikang and S\'eguin, Fredrick H. and Park, Hye-Sook and Tzeferacos, Petros and Willingale, Louise},
+	journal = {Rev. Mod. Phys.},
+	volume = {95},
+	issue = {4},
+	pages = {045007},
+	numpages = {48},
+	year = {2023},
+	month = {Dec},
+	publisher = {American Physical Society},
+	doi = {10.1103/RevModPhys.95.045007},
+	url = {https://link.aps.org/doi/10.1103/RevModPhys.95.045007}
+}
